email me was underlined. fixed bug

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h2>RM</h2>
     
     <nav>
-        <a class="darkerText" href="https://github.com/deadlykittensgs" target="_blank" >github</a>
-        <a class="darkerText"  href="https://github.com/" target="_blank">linkedIn</a>
+        <a class="darkerText" href="https://github.com/deadlykittensgs" target="_blank" >GitHub</a>
+        <a class="darkerText"  href="https://github.com/" target="_blank">LinkedIn</a>
     </nav>
 </header>
 
@@ -25,7 +25,7 @@
     <section>
     <div class="nameContainer"> 
 <h1>Ryan McMahon</h1>
-<P class="darkerText">i write code and build prodjects</P>
+<P class="darkerText">I write code and build Projects</P>
     </div>
 
     <div class ="statsContainer">
@@ -48,29 +48,30 @@
                 <div>
                     <i class="fa-brands fa-github"></i>
                 </div>
-                    <p>  123 impressive stat</p>
+                    <p>  123 impressive stat loading</p>
             </div>
         <div>
 
                 <div>
                     <i class="fa-solid fa-arrow-trend-up"></i>
                 </div> 
-                    <p> 345 Daily GetHub Commits</p>
+                    <p> 123 Daily GetHub Commits (I wish LOL)</p>
         </div>
     </div>
 </div>
 
 
-<p class="aboutMe"> Hi, I'm Ryan McMahon, a web developer who loves
-     building cool things with code. In addition
-    to coding I play guitar am working on a few other things  </p>
+<p class="aboutMe"> Hi, I'm Ryan McMahon, a web Developer who loves
+                    building cool things with code. In addition
+                    to coding I play guitar and am working on a few other 
+                    that I will be posting shortly! </p>
 
 
 
     <div> 
-        <a href="mailto:ryan270win@gmail.com"  class= "outreach darkerText">
-            <i class="fa-solid fa-arrow-right-long"></i>
-            <p>Email me</p>
+        <a href="mailto:ryan270win@gmail.com"  class= "outreach darkerText nounder">
+        <i class="fa-solid fa-arrow-right"></i>
+            <p >Email me!</p>
         </a>    
     </div>  
 </section>
@@ -80,7 +81,7 @@
 <div class="projectItem">   
     <div>
         <p class="darkerText">01/01/2024</p>
-        <p>project description and name details about it. this will need to be two sentences to keep the format looking snazzy</p>
+        <p>project description and name details about it. this will need to be two sentences to keep the format looking snazzy like I like it</p>
 <div class="linkContainer">
     <a target="_blank" href="https://github.com/deadlykittensgs" class ="linkItem">
             <div>
@@ -133,7 +134,7 @@
 <div class="projectItem">   
     <div>
         <p class="darkerText">01/01/2024</p>
-        <p>project description and name and details about it this will  need to be  two sentences to keep the format looking snazzy</p>
+        <p>project description and name details about it. this will need to be two sentences to keep the format looking snazzy like I like it</p>
         <div class="linkContainer">
             <a target="_blank" href="https://github.com/deadlykittensgs" class ="linkItem">
                     <div>
