--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 </div>
 
 
-<p class="aboutMe"> Hi, I'm Ryan McMahon, a web Developer who loves
-                    building cool things with code. In addition
-                    to coding I play guitar and am working on a few other 
-                    that I will be posting shortly! </p>
+<p class="aboutMe"> Hi, I'm Ryan McMahon, a web Developer who loves building cool things with code. In addition to coding, I play guitar and am working on a few other things that I will be posting shortly!</p>
 
 
 
