--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
 
-                    <p>14 GitHub Repositories</p>
+                    <p>32 GitHub Repositories</p>
             </div>
             <div>
 
@@ -86,7 +86,7 @@
             </div>
                 <p>  GitHub</p>        
         </a>
-    <a target= "_blank" href ="https://www.google.com/" class="linkItem">
+    <a target= "_blank" href ="https://google-cloneryanm.netlify.app" class="linkItem">
         <div>
             <i class="fa-solid fa-bolt-lightning"></i>
         </div>
@@ -131,25 +131,28 @@
 <div class="projectItem">   
     <div>
         <p class="darkerText">01/01/2024</p>
-        <p>project description and name details about it. this will need to be two sentences to keep the format looking snazzy like I like it</p>
+        <p> Web sight homepage for a future project. i am currently making sure the page adapts itself well to mobile even with no @media query</p>
         <div class="linkContainer">
-            <a target="_blank" href="https://github.com/deadlykittensgs" class ="linkItem">
+            <a target="_blank" href="https://github.com/deadlykittensgs/blackAndGoldwebsight" class ="linkItem">
                     <div>
                         <i class="fa-brands fa-github"></i>
                     </div>
                         <p>  GitHub</p>        
                 </a>
-            <a target= "_blank" href ="https://www.google.com/" class="linkItem">
+            <a target= "_blank" href ="https://blackandgoldbasicpage.netlify.app
+
+            " class="linkItem">
                 <div>
                     <i class="fa-solid fa-bolt-lightning"></i>
                 </div>
-                    <p>Live</p>        
+                    <p>Live</p>   
+                         
             </a>
             </div>
         
     </div>
      <div>
-        <img src="public/Screenshot 2024-03-23 at 4.13.57 PM.png" alt="project image">
+        <img src="public/blackandgold.png" alt="project image">
      </div>
 
 </div>
